add missing test file to .net core fsproj

--- a/integrationtests/Paket.IntegrationTests.preview3/Paket.IntegrationTests.fsproj
+++ b/integrationtests/Paket.IntegrationTests.preview3/Paket.IntegrationTests.fsproj
@@ -43,6 +43,7 @@
     <Compile Include="$(PaketTestsSourcesDir)\LoadingScriptGenerationTests.fs" />
     <Compile Include="$(PaketTestsSourcesDir)\LocalOverrideSpecs.fs" />
     <Compile Include="$(PaketTestsSourcesDir)\SimplifierSpecs.fs" />
+    <Compile Include="$(PaketTestsSourcesDir)\RepoToolSpecs.fs" />
     <None Include="paket.references" />
   </ItemGroup>
 
